Add pagination handling tests